tests/misc/projects/Issue6810/pretty-fail.hxml.stderr
[ERROR] Fail.hx:7: characters 8-12

 7 |   test(void);
   |        ^^^^
   | error: Void should be haxe.NotVoid
   | have: (...) -> Void
   | want: (...) -> haxe.NotVoid
   | For function argument 'f'

[ERROR] Fail.hx:8: characters 8-16

 8 |   test(fakeVoid);
   |        ^^^^^^^^
   | error: FakeVoid should be haxe.NotVoid
   | have: (...) -> FakeVoid
   | want: (...) -> haxe.NotVoid
   | For function argument 'f'

